deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment2
  labels:
    app: devops2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: devops2
  template:
    metadata:
      labels:
        app: devops2
    spec:
        containers:
          - name: devops2
            image: djilalidernane/my-app
            ports:
            - containerPort: 80
