service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: devops-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
